--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,10 @@
 FROM nginx 
+EXPOSE 80 
 COPY code /usr/share/nginx/html 
 RUN rm -rf /etc/nginx/nginx.conf
 RUN rm -rf /etc/nginx/conf.d/default.conf 
 COPY nginx.conf /etc/nginx/nginx.conf 
-COPY expense.conf /etc/nginx/conf.d/expense.conf 
+#COPY expense.conf /etc/nginx/conf.d/expense.conf 
 
 
 
