--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -78,9 +78,12 @@ http {
     }
 
     location /api/ { 
-        proxy_pass http://backend:8080/;
+        proxy_pass http://localhost:8080/;
     }
 
     }
 
 }
+
+
+
