--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,8 @@
-FROM nginx 
+FROM nginx
+RUN rm -rf /usr/share/nginx/html/index.html
 RUN rm -rf /etc/nginx/nginx.conf
-RUN rm -rf /etc/nginx/conf.d
+COPY nginx.conf /etc/nginx/nginx.conf
 COPY code /usr/share/nginx/html/
-COPY nginx.conf /etc/nginx/nginx.conf 
 #COPY expense.conf /etc/nginx/conf.d/expense.conf 
 
 
